# django-automations

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .toml  LICENSE  MANIFEST.in  README.md  conf.py  index.rst  runtests.py  setup.cfg
.github/workflows/: codeql-analysis.yml  tests.yml
doc/: core-concepts.rst  home.rst  how-to.rst  introduction-to-automations.rst  reference.rst
src/automations/: __init__.py  apps.py  cms_plugins.py  flow.py  models.py  settings.py  tests.py  urls.py  views.py
src/automations/cms_automations/: admin.py  apps.py  cms_apps.py  cms_plugins.py  models.py
src/automations/cms_automations/migrations/: 0001_initial.py  0002_auto_20210506_1957.py  0003_auto_20210511_0825.py  0004_auto_20210511_1042.py  0005_auto_20211121_1838.py  0006_auto_20211229_0622.py  0007_auto_20220123_2236.py
src/automations/management/commands/: automation_delete_history.py  automation_step.py
src/automations/migrations/: 0001_initial.py  0002_auto_20210506_1957.py  0003_auto_20210511_0825.py  0004_auto_20210511_1042.py  0005_automationmodel_key.py  0006_auto_20211121_1357.py  0007_auto_20211229_0622.py  0008_auto_20220123_2236.py
src/automations/templates/: base.html
src/automations/templatetags/: atm_tags.py
src/automations/tests/: __init__.py  methods.py  models.py  test_automations.py  urls.py
src/django-automations/: models.py
src/django_automations/: apps.py  flow.py
src/django_automations.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/django_automations_fsbraun.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+23 files in other folders)
