[metadata]
# replace with your username:
name = django-automations
version = 0.4.0
author = Fabian Braun
author_email = fsbraun@gmx.de
description = Processes and automations for your Django project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fsbraun/django-automations
project_urls =
    Bug Tracker = https://github.com/fsbraun/django-automations/issues
    Documentation = https://django-automations.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: Django
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Framework :: Django :: 3.2
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    django_automations
    workflow
    automation

[options]
include_package_data = True
package_dir =
    = src
packages = automations
python_requires = >=3.7
install_requires =
    Django>=3.0
